src/test/compile-fail/tuple-arity-mismatch.rs
// Copyright 2013 The Rust Project Developers. See the COPYRIGHT
// file at the top-level directory of this distribution and at
// http://rust-lang.org/COPYRIGHT.
//
// Licensed under the Apache License, Version 2.0 <LICENSE-APACHE or
// http://www.apache.org/licenses/LICENSE-2.0> or the MIT license
// <LICENSE-MIT or http://opensource.org/licenses/MIT>, at your
// option. This file may not be copied, modified, or distributed
// except according to those terms.

// Issue #6155

fn first((value, _): (int, float)) -> int { value }

fn main() {
    let y = first ((1,2,3)); //~ ERROR expected a tuple with 2 elements but found one with 3 elements
}
